# pm_ranking

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  api.html  colab_demo.html  demo.html  demo.py  example.py  genindex.html  hello.py  index.html  objects.inv  predictions_problem_3700.json  py-modindex.html  pyproject.toml  scrape_gjo_predictions_data.py  scrape_gjo_problem_data.py  search.html  searchindex.js  test_enhanced_scraper.py  test_scraper.py  usage.html
.github/workflows/: gh-pages.yml  tests.yml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/algo/: index.rst.txt
_sources/autoapi/algo_betting_/: index.rst.txt
_sources/autoapi/algo_legacy/: index.rst.txt
_sources/autoapi/bootstrap/: index.rst.txt
_sources/autoapi/data/: index.rst.txt
_sources/blogpost/: ranking_llm_250727.md.txt  ranking_llm_250810.md.txt
autoapi/: index.html
autoapi/algo/: index.html
autoapi/algo_betting_/: index.html
autoapi/algo_legacy/: index.html
autoapi/bootstrap/: index.html
autoapi/data/: index.html
autoapi/misc/: index.html
autoapi/plot/: index.html
autoapi/plot_timestamp/: index.html
autoapi/run_rank/: index.html
autoapi/scoring/: index.html
autoapi/test_algo/: index.html
autoapi/test_bootstrap/: index.html
autoapi/test_calibration/: index.html
autoapi/utils/: index.html
blogpost/: ranking_llm_250727.html  ranking_llm_250727_cn.html  ranking_llm_250810.html
crawler/: constants.py  crawler.md
crawler/html/: challenge_97_3.html  comment_3700_2.html
data/: __init__.py  all_predictions.json  base.py  loaders.py
data/raw/: NOTE.md
demos/: demo_multiple_rankings.py  demo_simple.py
docs/: api-reference.mdx  concepts.mdx  docs.json  installation.mdx  introduction.mdx  quickstart.mdx
docs/blog/: ranking-llms.mdx
docs/source/: api.rst  colab_demo.rst  conf.py  demo.rst  index.rst  usage.rst
docs/usage/: average-return.mdx  bradley-terry.mdx  calibration.mdx  comparing-rankings.mdx  scoring-rules.mdx
model/: __init__.py  bradley_terry.py  market_earning.py  scoring_rule.py  utils.py
model/irt/: __init__.py  _dataset.py  _pyro_models.py
notebook/: sports_challenge_predictions.ipynb
plotting/: plot_crra_risks_curves.py
recipes/analyze_brier_score_over_num_markets/: analysis.ipynb  utils.py  visualize.py
src/pm_rank/: __init__.py
test/: conftest.py  inspect_new_prophet.py  test_all_models.py  test_average_return_fit.py  test_average_return_internals.py  test_bradley_terry.py  test_calibration.py  test_cluster.sh  test_correlations.py  test_data_models.py  test_gjo_loader.py  test_market_earning.py  test_prophet_loader.py  test_scoring_rules.py
(+66 files in other folders)
