[project]
name = "pm_rank"
version = "0.3.1"
description = "A toolkit for scoring and ranking prediction market forecasters."
authors = [
    { name = "Sida Li", email = "listar2000@uchicago.edu" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "matplotlib",
    "seaborn",
    "pandas",
    "tqdm",
    # add other dependencies as needed
]

[project.optional-dependencies]
# Documentation is built with Mintlify (npm-based, see docs/docs.json).
# No Python dependencies are required to build or preview the docs locally;
# install the Mintlify CLI with `npm i -g mintlify` and run `mintlify dev`
# from the `docs/` directory.

full = [
    "pyro-ppl",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
